fixed letter spacing

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -30,6 +30,7 @@
   border-bottom: 3px solid rgba(255, 255, 255, 0.76);
   padding-bottom: .25em;
   text-decoration: none;
+  letter-spacing: 0.5px;
 }
 
 
@@ -53,6 +54,7 @@
 
 .post-meta {
   font-size: 0.8rem;
+  letter-spacing: 3px;
 }
 
 .blog-title {
@@ -67,4 +69,5 @@
 
 .blog-meta {
   font-size: 0.7rem;
+  letter-spacing: 0.5px;
 }
